--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.url=jdbc:h2:mem:springdb
 spring.jpa.database=h2
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
